--- a/resources/sass/layout/_footer.scss
+++ b/resources/sass/layout/_footer.scss
@@ -60,7 +60,7 @@
 }
 .wrapper .icon a {
     font-size: 30px;
-    // color: rgb(0, 0, 0);
+    color: #000;
 }
 
 .wrapper .tooltip {
