--- a/resources/sass/layout/_homepage.scss
+++ b/resources/sass/layout/_homepage.scss
@@ -121,11 +121,4 @@
     .title-black {
         color: black;
     }
-
-    @media all and (max-width: 500px) {
-        .card-list {
-            /* On small screens, we are no longer using row direction but column */
-            flex-direction: column;
-        }
-    }
 }
